SonarLint Rule java:S1948